--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
