--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hydration-provider": "^1.0.2",
     "react-icons": "^4.7.1",
+    "router": "^1.3.7",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2"
   },
