--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "hardhat": "^2.12.6"
+  },
+  "dependencies": {
+    "alchemy-sdk": "^2.4.2"
   }
 }
